New Buffer flag : ignoreFileChange. You can set it to true if you don't want jEdit   warn your if the buffer changes on the disk. This can be useful if you are editing   log files. There is also a status bar widget for it
git-svn-id: svn+ssh://svn.code.sf.net/p/jedit/svn/jEdit/trunk@8186 6b1eeb88-9816-0410-afa2-b43733a0f04e