@@ -110,6 +110,12 @@ public class StatusBar extends JPanel implements WorkThreadProgressListener
 		lineSep.setHorizontalAlignment(SwingConstants.CENTER);
 		lineSep.setToolTipText(jEdit.getProperty("view.status.linesep-tooltip"));
 		lineSep.addMouseListener(mouseHandler);
+
+		ignoreFileChange = new ToolTipLabel();
+		ignoreFileChange.setHorizontalAlignment(SwingConstants.CENTER);
+		ignoreFileChange.setToolTipText(jEdit.getProperty("view.status.ignorefilechange-tooltip"));
+		ignoreFileChange.addMouseListener(mouseHandler);
+
 	} //}}}
 
 	//{{{ propertiesChanged() method
@@ -127,6 +133,7 @@ public class StatusBar extends JPanel implements WorkThreadProgressListener
 		showRectSelect = jEdit.getBooleanProperty("view.status.show-rect-select");
 		showOverwrite = jEdit.getBooleanProperty("view.status.show-overwrite");
 		showLineSeperator = jEdit.getBooleanProperty("view.status.show-line-seperator");
+		showIgnoreFileChange = jEdit.getBooleanProperty("view.status.show-ignore-file-change");
 		boolean showMemory = jEdit.getBooleanProperty("view.status.show-memory");
 		boolean showClock = jEdit.getBooleanProperty("view.status.show-clock");
 
@@ -148,12 +155,14 @@ public class StatusBar extends JPanel implements WorkThreadProgressListener
 		overwrite.setForeground(fg);
 		lineSep.setBackground(bg);
 		lineSep.setForeground(fg);
+		ignoreFileChange.setBackground(bg);
+		ignoreFileChange.setForeground(fg);
 
 		// retarded GTK look and feel!
 		Font font = new JLabel().getFont();
 		//UIManager.getFont("Label.font");
 		FontMetrics fm = getFontMetrics(font);
-		Dimension dim = null;
+		Dimension dim;
 
 		if (showCaretStatus)
 		{
@@ -225,6 +234,16 @@ public class StatusBar extends JPanel implements WorkThreadProgressListener
 			box.add(lineSep);
 		}
 
+		if (showIgnoreFileChange)
+		{
+			dim = new Dimension(Math.max(fm.charWidth('-'),
+						     fm.charWidth('I')) + 1,
+					    fm.getHeight());
+			ignoreFileChange.setPreferredSize(dim);
+			ignoreFileChange.setMaximumSize(dim);
+			box.add(ignoreFileChange);
+		}
+
 		if (showMemory)
 			box.add(new MemoryStatus());
 
@@ -278,7 +297,7 @@ public class StatusBar extends JPanel implements WorkThreadProgressListener
 				}
 				else
 				{
-					Object[] args = { new Integer(requestCount) };
+					Object[] args = {Integer.valueOf(requestCount)};
 					setMessage(jEdit.getProperty(
 						"view.status.io",args));
 					currentMessageIsIO = true;
@@ -470,6 +489,14 @@ public class StatusBar extends JPanel implements WorkThreadProgressListener
 				this.lineSep.setText("M");
 		}
 
+		if (showIgnoreFileChange)
+		{
+			if (buffer.isIgnoreFileState())
+				ignoreFileChange.setText("I");
+			else
+				ignoreFileChange.setText("-");
+		}
+
 		if (showEditMode || showFoldMode || showEncoding)
 		{
 			/* This doesn't look pretty and mode line should
@@ -477,7 +504,7 @@ public class StatusBar extends JPanel implements WorkThreadProgressListener
 			 * components/strings
 			 */
 			buf.setLength(0);
-
+			buf.append('(');
 			if (buffer.isLoaded())
 			{
 				if (showEditMode)
@@ -485,18 +512,18 @@ public class StatusBar extends JPanel implements WorkThreadProgressListener
 				if (showFoldMode)
 				{
 					if (showEditMode)
-						buf.append(",");
+						buf.append(',');
 					buf.append((String)view.getBuffer().getProperty("folding"));
 				}
 				if (showEncoding)
 				{
 					if (showEditMode || showFoldMode)
-						buf.append(",");
+						buf.append(',');
 					buf.append(buffer.getStringProperty("encoding"));
 				}
 			}
 
-			mode.setText("(" + buf.toString() + ")");
+			mode.setText(buf.append(')').toString());
 		}
 	} //}}}
 
@@ -534,6 +561,7 @@ public class StatusBar extends JPanel implements WorkThreadProgressListener
 	private JLabel rectSelect;
 	private JLabel overwrite;
 	private JLabel lineSep;
+	private JLabel ignoreFileChange;
 	/* package-private for speed */ StringBuffer buf = new StringBuffer();
 	private Timer tempTimer;
 	private boolean currentMessageIsIO;
@@ -549,6 +577,7 @@ public class StatusBar extends JPanel implements WorkThreadProgressListener
 	private boolean showRectSelect;
 	private boolean showOverwrite;
 	private boolean showLineSeperator;
+	private boolean showIgnoreFileChange;
 	//}}}
 
 	static final String caretTestStr = "9999,999-999 99%";
@@ -581,11 +610,13 @@ public class StatusBar extends JPanel implements WorkThreadProgressListener
 				view.getTextArea().toggleOverwriteEnabled();
 			else if(source == lineSep)
 				buffer.toggleLineSeparator(view);
+			else if (source == ignoreFileChange)
+				buffer.setIgnoreFileChange(!buffer.isIgnoreFileState());
 		}
 	} //}}}
 
 	//{{{ ToolTipLabel class
-	class ToolTipLabel extends JLabel
+	static class ToolTipLabel extends JLabel
 	{
 		//{{{ getToolTipLocation() method
 		public Point getToolTipLocation(MouseEvent event)
@@ -598,12 +629,12 @@ public class StatusBar extends JPanel implements WorkThreadProgressListener
 	class MemoryStatus extends JComponent implements ActionListener
 	{
 		//{{{ MemoryStatus constructor
-		public MemoryStatus()
+		MemoryStatus()
 		{
 			// fucking GTK look and feel
 			Font font = new JLabel().getFont();
 			//Font font = UIManager.getFont("Label.font");
-			MemoryStatus.this.setFont(font);
+			setFont(font);
 
 			FontRenderContext frc = new FontRenderContext(
 				null,false,false);
@@ -647,9 +678,9 @@ public class StatusBar extends JPanel implements WorkThreadProgressListener
 		public String getToolTipText()
 		{
 			Runtime runtime = Runtime.getRuntime();
-			int freeMemory = (int)(runtime.freeMemory() / 1024);
-			int totalMemory = (int)(runtime.maxMemory() / 1024);
-			int usedMemory = (totalMemory - freeMemory);
+			int freeMemory = (int)(runtime.freeMemory() >> 10);
+			int totalMemory = (int)(runtime.maxMemory() >> 10);
+			int usedMemory = totalMemory - freeMemory;
 			Integer[] args = { new Integer(usedMemory),
 				new Integer(totalMemory) };
 			return jEdit.getProperty("view.status.memory-tooltip",args);
@@ -664,7 +695,7 @@ public class StatusBar extends JPanel implements WorkThreadProgressListener
 		//{{{ actionPerformed() method
 		public void actionPerformed(ActionEvent evt)
 		{
-			MemoryStatus.this.repaint();
+			repaint();
 		} //}}}
 
 		//{{{ paintComponent() method
@@ -673,13 +704,13 @@ public class StatusBar extends JPanel implements WorkThreadProgressListener
 			Insets insets = new Insets(0,0,0,0);//MemoryStatus.this.getBorder().getBorderInsets(this);
 
 			Runtime runtime = Runtime.getRuntime();
-			int freeMemory = (int)(runtime.freeMemory() / 1024);
-			int totalMemory = (int)(runtime.totalMemory() / 1024);
-			int usedMemory = (totalMemory - freeMemory);
+			int freeMemory = (int)(runtime.freeMemory() >> 10);
+			int totalMemory = (int)(runtime.totalMemory() >> 10);
+			int usedMemory = totalMemory - freeMemory;
 
-			int width = MemoryStatus.this.getWidth()
+			int width = getWidth()
 				- insets.left - insets.right;
-			int height = MemoryStatus.this.getHeight()
+			int height = getHeight()
 				- insets.top - insets.bottom - 1;
 
 			float fraction = ((float)usedMemory) / totalMemory;
@@ -690,8 +721,8 @@ public class StatusBar extends JPanel implements WorkThreadProgressListener
 				(int)(width * fraction),
 				height);
 
-			String str = (usedMemory / 1024) + "/"
-				+ (totalMemory / 1024) + "Mb";
+			String str = (usedMemory >> 10) + "/"
+				+ (totalMemory >> 10) + "Mb";
 
 			FontRenderContext frc = new FontRenderContext(null,false,false);
 
@@ -705,7 +736,7 @@ public class StatusBar extends JPanel implements WorkThreadProgressListener
 			g2.setColor(progressForeground);
 
 			g2.drawString(str,
-				insets.left + (int)(width - bounds.getWidth()) / 2,
+				insets.left + ((int) (width - bounds.getWidth()) >> 1),
 				(int)(insets.top + lm.getAscent()));
 
 			g2.dispose();
@@ -713,14 +744,14 @@ public class StatusBar extends JPanel implements WorkThreadProgressListener
 			g2 = g.create();
 
 			g2.setClip(insets.left + (int)(width * fraction),
-				insets.top,MemoryStatus.this.getWidth()
+				insets.top,getWidth()
 				- insets.left - (int)(width * fraction),
 				height);
 
-			g2.setColor(MemoryStatus.this.getForeground());
+			g2.setColor(getForeground());
 
 			g2.drawString(str,
-				insets.left + (int)(width - bounds.getWidth()) / 2,
+				insets.left + ((int) (width - bounds.getWidth()) >> 1),
 				(int)(insets.top + lm.getAscent()));
 
 			g2.dispose();
@@ -751,10 +782,10 @@ public class StatusBar extends JPanel implements WorkThreadProgressListener
 	} //}}}
 
 	//{{{ Clock class
-	class Clock extends JLabel implements ActionListener
+	static class Clock extends JLabel implements ActionListener
 	{
 		//{{{ Clock constructor
-		public Clock()
+		Clock()
 		{
 			/* FontRenderContext frc = new FontRenderContext(
 				null,false,false);
@@ -816,7 +847,7 @@ public class StatusBar extends JPanel implements WorkThreadProgressListener
 		private Timer timer;
 
 		//{{{ getTime() method
-		private String getTime()
+		private static String getTime()
 		{
 			return DateFormat.getTimeInstance(
 				DateFormat.SHORT).format(new Date());
